Content: GET method, display town parts

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,4 +6,12 @@
     WeatherApp
   </a>
 </nav>
+
+<div class="input_container">
+  <input id="townNameNEW">
+  <input id="townCountryNEW">
+  <button>ADD TOWN</button>
+</div>
+
+
 <span id="time">{{currentTime | date: 'hh:mm:ss a, d/M/yy' }}</span>
