--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,42 +30,40 @@ span {
     input {
         font-family: "Truculenta", sans-serif;
         background-color: transparent;
+        text-transform: uppercase;
+
         border-color: #40513B;
-        border-top: 0;
-        border-left: 0;
-        border-right: 0;
+        border-width: 0px;
+        border-bottom-width: 1px;
 
         font-size: 20px;
         width: 15opx;
-
-
-
     }
 
     #townCountryNEW {
         width: 50px;
         margin-left: 15px;
-
     }
 
 
     button {
         background-color: #40513B;
-        color: #9DC08B;
+        color: #EDF1D6;
         text-align: center;
         font-family: "Truculenta", sans-serif;
+        font-size: 0.8rem;
 
-        border: 0cap;
+        border-width: 0px;
         border-radius: 50%;
         width: 50px;
         height: 50px;
         cursor: pointer;
         margin-left: 10px;
 
-        :hover {
+        &:hover {
             border-radius: 50%;
 
-            box-shadow: 3px 3px 10px black;
+            box-shadow: 3px 3px 8px #40513B;
         }
     }
 }
