--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -23,10 +23,24 @@
         // MEDIA WIDTH
         @media(min-width: 768px) {
             width: 90%;
+
+            #townContainer {
+                flex-direction: row;
+            }
+
+            .nameTownP {
+                font-size: 8vw;
+                margin: 0;
+            }
         }
 
         @media(min-width: 1170px) {
             width: 48%;
+
+            .nameTownP {
+                font-size: 3vw;
+                margin: 0;
+            }
         }
 
         // MEDIA HEIGHT
@@ -39,6 +53,11 @@
         }
     }
 
+    .nameTownP {
+        font-size: 13vw;
+        margin: 0;
+    }
+
     #townContainer {
         position: relative;
 
@@ -48,7 +67,7 @@
         align-items: center;
         justify-content: space-around;
 
-        flex-direction: row;
+        flex-direction: column;
 
         background-position: center;
         background-size: cover;
@@ -66,7 +85,7 @@
             position: absolute;
 
             opacity: 40%;
-            border-radius: 1rem;      
+            border-radius: 1rem;
         }
 
         .townNameWeatherContainer {
@@ -80,14 +99,11 @@
         }
 
         .townNameWeather {
+            display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: flex-start;
             margin: 2rem;
-
-            p {
-                font-size: 6rem;
-                margin: 0;
-            }
         }
 
         .townName {
@@ -95,13 +111,51 @@
             flex-direction: row;
 
             align-items: center;
+
+            img {
+                width: 80px;
+                height: 80px;
+            }
         }
 
-        .weatherDescription {
+        .descriptionWeather {
+            font-size: 1.8rem;
+            margin: 0;
+            width: 100%;
+            text-align: left;
+            margin-left: 1rem;
+        }
 
+        .descriptionWeatherContainer {
+
+            display: flex;
+            flex-direction: row;
             justify-content: center;
-            align-items: flex-end;
-            font-size: 1rem;
+            width: 60%;
+            margin: 1rem;
+
+            background-color: white;
+            border-radius: 10%;
+            padding: 0.3rem;
+            opacity: 60%;
+
+
+            .weatherDescription {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+
+                p {
+                    margin: 0;
+                    font-size: 1.7rem;
+                    padding: 0.1rem;
+                }
+
+                .name {
+                    text-align: right;
+                }
+
+            }
         }
 
     }
