--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -17,7 +17,7 @@
 
         &:hover {
             border-radius: 1rem;
-            box-shadow: 3px 3px 10px #609966;
+            box-shadow: 3px 3px 10px gray;
         }
 
         // MEDIA WIDTH
