--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,13 +15,13 @@ a {
 }
 
 span {
-    margin-right: 5cap;
+    margin-right: 5rem;
     font-size: large;
     min-width: 150px;
 }
 
 .input_container {
-    width: 100%;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: end;
@@ -40,11 +40,10 @@ span {
         width: 15opx;
     }
 
-    #townCountryNEW {
+    #code_Country_New_Town {
         width: 50px;
         margin-left: 15px;
     }
-
 
     button {
         background-color: #40513B;
@@ -62,8 +61,13 @@ span {
 
         &:hover {
             border-radius: 50%;
-
             box-shadow: 3px 3px 8px #40513B;
+        }
+
+        &:disabled {
+            opacity: 50%;
+            cursor: auto;
+            box-shadow: 0px 0px 0px;
         }
     }
 }
