--- a/src/app/popup/popup.component.html
+++ b/src/app/popup/popup.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'openPopup': !open}">
+<div [ngClass]="{'openPopup': open}">
     <h1>{{stateMsg}}</h1>
     <p>{{stateMsgDescription}}</p>
     <button (click)="closePopup()">
