--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="content_container">
 
-    <button *ngFor="let town of townList">
+    <button *ngFor="let town of townList" [routerLink]="['/townDetails', town.id]">
         <div id="townContainer" style='--town-url: url("{{town.viewerInfo!.weatherMainUrl}}")'>
 
             <span class="townNameWeatherContainer">
