--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -4,26 +4,77 @@
         <div id="townContainer" style='--town-url: url("{{town.viewerInfo!.weatherMainUrl}}")'>
 
             <span class="townNameWeatherContainer">
-                <span class="townNameWeather">
+                <!-- <span class="townNameWeather"> -->
 
-                    <span class="townName">
-                        <p class="nameTownP">{{town.name}} </p>
-                        <img src='{{town.viewerInfo!.iconUrl}}' />
+                <span class="townName">
+                    <p class="nameTownP">{{town.name}} </p>
+                    <img src='{{town.viewerInfo!.iconUrl}}' />
+                </span>
+
+
+                <span class="townDegrDescription">
+                    <span class="temeratureWeather">
+                        {{town.viewerInfo!.temp}}
                     </span>
-
                     <span class="descriptionWeather">
                         {{town.viewerInfo!.description}}
                     </span>
-
-                    <span style="font-size: 6rem;">
-                        {{town.viewerInfo!.temp}}
-                    </span>
-
-
                 </span>
-            </span>
-            
+
+
+                <!-- </span> -->
+
             <span class="descriptionWeatherContainer">
+
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>Felt temperature</title>
+                        <path
+                            d="M17 3H21V5H17V3M17 7H21V9H17V7M17 11H21V13H17.75L17 12.1V11M21 15V17H19C19 16.31 18.9 15.63 18.71 15H21M7 3V5H3V3H7M7 7V9H3V7H7M7 11V12.1L6.25 13H3V11H7M3 15H5.29C5.1 15.63 5 16.31 5 17H3V15M15 13V5C15 3.34 13.66 2 12 2S9 3.34 9 5V13C6.79 14.66 6.34 17.79 8 20S12.79 22.66 15 21 17.66 16.21 16 14C15.72 13.62 15.38 13.28 15 13M12 4C12.55 4 13 4.45 13 5V8H11V5C11 4.45 11.45 4 12 4Z" />
+                    </svg>
+                    {{town?.viewerInfo?.feltTemp}}
+                </span>
+
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>Humidity</title>
+                        <path
+                            d="M12,3.25C12,3.25 6,10 6,14C6,17.32 8.69,20 12,20A6,6 0 0,0 18,14C18,10 12,3.25 12,3.25M14.47,9.97L15.53,11.03L9.53,17.03L8.47,15.97M9.75,10A1.25,1.25 0 0,1 11,11.25A1.25,1.25 0 0,1 9.75,12.5A1.25,1.25 0 0,1 8.5,11.25A1.25,1.25 0 0,1 9.75,10M14.25,14.5A1.25,1.25 0 0,1 15.5,15.75A1.25,1.25 0 0,1 14.25,17A1.25,1.25 0 0,1 13,15.75A1.25,1.25 0 0,1 14.25,14.5Z" />
+                    </svg>
+                    {{town?.viewerInfo?.humidity}}
+                </span>
+
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>Visibility</title>
+                        <path
+                            d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z" />
+                    </svg>
+                    {{town?.viewerInfo?.visibility}}
+                </span>
+
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>Wind speed</title>
+                        <path
+                            d="M7 5V13L22 11V7L7 5M10 6.91L13 7.31V10.69L10 11.09V6.91M16 7.71L19 8.11V9.89L16 10.29V7.71M5 10V11H6V12H5V21H3V4C3 3.45 3.45 3 4 3S5 3.45 5 4V6H6V7H5V10Z" />
+                    </svg>
+                    {{town?.viewerInfo?.windSpeed}}
+                </span>
+
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>clouds</title>
+                        <path
+                            d="M19.19 12.07C19.69 11.54 20 10.82 20 10C20 8.3 18.7 6.84 17 6.84H14.2C14.2 4.17 12.03 2 9.36 2C7.31 2 5.56 3.28 4.85 5.08C2.72 5.14 1 6.89 1 9.04C1 11.22 2.78 13 4.96 13H8.1C8.04 13.33 8 13.66 8 14H7.5C5.57 14 4 15.57 4 17.5S5.57 21 7.5 21H18.5C21 21 23 19 23 16.5C23 14.26 21.34 12.41 19.19 12.07M18.5 19H7.5C6.67 19 6 18.33 6 17.5S6.67 16 7.5 16H10V14C10 12.07 11.57 10.5 13.5 10.5S17 12.07 17 14H18.5C19.88 14 21 15.12 21 16.5S19.88 19 18.5 19Z" />
+                    </svg>
+                    {{town?.viewerInfo?.clouds}}
+                </span>
+
+            </span>
+        </span>
+
+            <!-- <span class="descriptionWeatherContainer">
 
                 <span class="weatherDescription">
                     <p class="name">Felt temp | </p>
@@ -40,7 +91,7 @@
                     <p>{{town.viewerInfo!.windSpeed}}</p>
                     <p>{{town.viewerInfo!.clouds}}</p>
                 </span>
-            </span>
+            </span> -->
 
         </div>
     </button>
