--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,23 @@
+.headerContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
 nav {
     display: flex;
     align-items: center;
     justify-content: left;
+
+    #logoContainer {
+        img {
+            margin: 5px;
+            height: 30px;
+            width: 30px;
+        }
+
+        font-size: 20px;
+    }
 }
 
 a {
@@ -15,17 +31,31 @@ a {
 }
 
 span {
-    margin-right: 5rem;
+    margin-right: 3rem;
     font-size: large;
     min-width: 150px;
 }
 
+.input_container_mobile {
+
+    button {
+        margin: 0.5rem;
+        border-radius: 1rem;
+        width: 6rem;
+        height: 2rem;
+    }
+
+    .formContainerMobile {
+        width: 100%;
+        height: auto;
+    }
+}
+
 .input_container {
-    width: 90%;
-    display: flex;
+    display: none;
     align-items: center;
-    justify-content: end;
-    margin-right: 2%;
+    justify-content: flex-end;
+    margin-left: auto;
 
     input {
         font-family: "Truculenta", sans-serif;
@@ -37,37 +67,71 @@ span {
         border-bottom-width: 1px;
 
         font-size: 20px;
-        width: 15opx;
+        width: 100px;
     }
 
     #code_Country_New_Town {
         width: 50px;
         margin-left: 15px;
     }
+}
 
-    button {
-        background-color: #40513B;
-        color: #EDF1D6;
-        text-align: center;
-        font-family: "Truculenta", sans-serif;
-        font-size: 0.8rem;
+button {
+    background-color: #40513B;
+    color: #EDF1D6;
+    text-align: center;
+    font-family: "Truculenta", sans-serif;
+    font-size: 0.8rem;
 
-        border-width: 0px;
+    border-width: 0px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    margin-left: 10px;
+
+    &:hover {
         border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        cursor: pointer;
-        margin-left: 10px;
+        box-shadow: 3px 3px 8px #40513B;
+    }
 
-        &:hover {
-            border-radius: 50%;
-            box-shadow: 3px 3px 8px #40513B;
-        }
+    &:disabled {
+        opacity: 50%;
+        cursor: auto;
+        box-shadow: 0px 0px 0px;
+    }
+}
 
-        &:disabled {
-            opacity: 50%;
-            cursor: auto;
-            box-shadow: 0px 0px 0px;
+#time {
+    display: none;
+    margin-right: 2rem;
+    align-items: center;
+    justify-content: flex-end;
+    margin-left: auto;
+}
+
+@media(min-width: 450px) {
+    nav {
+        #logoContainer {
+
+            font-size: 30px;
+
+            img {
+                height: 60px;
+                width: 60px;
+            }
         }
+    }
+
+    .input_container {
+        display: flex;
+    }
+
+    .input_container_mobile {
+        display: none;
+    }
+
+    #time {
+        display: flex;
     }
 }
